--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "roundtable-js",
-  "version": "0.0.1-beta.6",
+  "version": "0.0.2-beta.2",
   "type": "module",
   "description": "A modular survey framework built with JavaScript",
-  "main": "index.js",
+  "main": "dist/bundle.js",
   "scripts": {
-    "start": "http-server . -c-1"
+    "start": "http-server . -c-1",
+    "build": "webpack --mode production"
   },
   "files": [
     "core/",
     "question_types/",
     "utils/",
+    "dist/",
     "index.js",
     "README.md"
   ],
@@ -28,5 +30,13 @@
   "bugs": {
     "url": "https://github.com/roundtableai/roundtable-js/issues"
   },
-  "homepage": "https://github.com/roundtableai/roundtable-js#readme"
+  "homepage": "https://github.com/roundtableai/roundtable-js#readme",
+  "devDependencies": {
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.0.0",
+    "babel-loader": "^8.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "http-server": "^0.12.0"
+  }
 }
