--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roundtable-js",
-  "version": "0.0.3-beta.0",
+  "version": "0.1.0",
   "type": "module",
   "description": "A modular survey framework built with JavaScript",
   "main": "dist/bundle.js",
